# look_ros2

./: .gitmodules  README.md  package.xml  requirements.txt  setup.cfg  setup.py
look_ros2/: predictor.py
scripts/: patch_yolo_pose.sh
