<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>look_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 wrapper for LOOK - a gaze detector</description>
  <maintainer email="aleksa.kostic.fl@ait.ac.at">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>zed_interfaces</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
